fix: z-index overlapped with navigate header

--- a/src/App.scss
+++ b/src/App.scss
@@ -223,7 +223,7 @@
   font-weight: 600;
   position: absolute;
   top: -4.2rem;
-  z-index: 99;
+  z-index: 9999;
   width: 100px;
   left: 19px;
   background-color: #fff;
